detected memory limits correctly in the container